--- a/index.html
+++ b/index.html
@@ -23,17 +23,19 @@
             <h3 class="text-center">GetOutside<br><small>Let us help plan your next adventure!</small></h3>
             <div class="sport col-md-6 col-md-offset-3">
               <ul class="list-unstyled list-inline">
-                <li id="bike">
-                  <button class="btn btn-default btn-xs">
+                <li>
+                  <button class="btn btn-default btn-xs" id="bike">
                   <img src="images/bike.png"> 
                   </button>
                 </li>
-                <li id="hike">
-                  <button class="btn btn-default btn-xs">
+                <li>
+                  <button class="btn btn-default btn-xs"  id="hike">
                   <img src="images/hike.png"> 
                   </button>
                 </li>
               </ul>
+              </div>
+              <div class="col-md-11 col-md-offset-1">
               <form>
                 <div class="form-group text-left">
                   <label for="city">City</label>
@@ -50,8 +52,9 @@
               
                 <button id="find-trails" type="submit" class="btn btn-primary btn-lg">Find Trails</button>
             </form>
-
             </div>
+</div>
+            
 
 
           </div>
