--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/bootstrap-slider.min.js"></script>  
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-    <script src="http://maps.google.com/maps/api/js?"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAEjZLscqodChd4PALGu9SV1Ot3SwTIH98&callback=initMap"></script>
     <script type="text/javascript" src="js/app.js"></script>
     
     
